--- a/argo-cd/overlays/production/ingress.yaml
+++ b/argo-cd/overlays/production/ingress.yaml
@@ -3,12 +3,12 @@ kind: Ingress
 metadata:
   name: argocd-server
   annotations:
-    kubernetes.io/ingress.class: "nginx"
     ingress.kubernetes.io/ssl-redirect: "false"
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
     ingress.kubernetes.io/rewrite-target: /
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
+  ingressClassName: nginx
   rules:
   - http:
       paths:
