--- a/apps.yaml
+++ b/apps.yaml
@@ -11,7 +11,7 @@ spec:
   project: production
   source:
     repoURL: https://github.com/DennisSangberg/argo-combined-demo.git
-    targetRevision: HEAD
+    targetRevision: testing
     path: production
   destination:
     server: https://kubernetes.default.svc
@@ -34,7 +34,7 @@ spec:
   project: staging
   source:
     repoURL: https://github.com/DennisSangberg/argo-combined-demo.git
-    targetRevision: HEAD
+    targetRevision: testing
     path: staging
   destination:
     server: https://kubernetes.default.svc
