--- a/argo-workflows/overlays/production/ingress.yaml
+++ b/argo-workflows/overlays/production/ingress.yaml
@@ -4,9 +4,10 @@ metadata:
   name: argo-workflows
   namespace: argo
   annotations:
-    nginx.ingress.kubernetes.io/backend-protocol: https
+    kubernetes.io/ingress.class: "nginx"
+    ingress.kubernetes.io/ssl-redirect: "false"
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"
 spec:
-  ingressClassName: nginx
   rules:
   - http:
       paths:
