--- a/argo-workflows/overlays/production/ingress.yaml
+++ b/argo-workflows/overlays/production/ingress.yaml
@@ -4,10 +4,9 @@ metadata:
   name: argo-workflows
   namespace: argo
   annotations:
-    kubernetes.io/ingress.class: "nginx"
-    ingress.kubernetes.io/ssl-redirect: "false"
-    nginx.ingress.kubernetes.io/ssl-redirect: "false"
+    nginx.ingress.kubernetes.io/backend-protocol: https
 spec:
+  ingressClassName: nginx
   rules:
   - http:
       paths:
