--- a/production/argo-rollouts.yaml
+++ b/production/argo-rollouts.yaml
@@ -10,7 +10,7 @@ spec:
   source:
     path: argo-rollouts/base
     repoURL: https://github.com/DennisSangberg/argo-combined-demo
-    targetRevision: HEAD
+    targetRevision: testing
   destination:
     server: https://kubernetes.default.svc
   syncPolicy:
