--- a/production/argo-workflows.yaml
+++ b/production/argo-workflows.yaml
@@ -10,7 +10,7 @@ spec:
   source:
     path: argo-workflows/overlays/production
     repoURL: https://github.com/DennisSangberg/argo-combined-demo
-    targetRevision: HEAD
+    targetRevision: testing
   destination:
     server: https://kubernetes.default.svc
   syncPolicy:
