Change target revision to testing

--- a/orig/sealed-secrets.yaml
+++ b/orig/sealed-secrets.yaml
@@ -10,7 +10,7 @@ spec:
   source:
     path: sealed-secrets
     repoURL: https://github.com/vfarcic/argocd-production
-    targetRevision: HEAD
+    targetRevision: testing
   destination:
     server: https://kubernetes.default.svc
   syncPolicy:
